[package]
name = "pokemon_simple_env"
version = "0.1.0"
edition = "2024"

[lib]
name = "pokemon_simple_env"
crate-type = ["cdylib"]   # required for Python module

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
typed-builder = "0.23.2"
enum-map = "2.7.3"
strum = { version = "0.27", features = ["derive"] }